[project]
name = "recargaya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "locust>=2.44.1",
    "pytest>=9.0.3",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=7.1.0",
    "uvicorn>=0.49.0",
]
