[project]
name = "recargaya"
version = "0.1.0"
description = "Módulo de cálculo de recargas de celular para RecargaYa S.A.S."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "locust>=2.44.1",
    "pytest>=9.0.3",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=7.1.0",
    "uvicorn>=0.49.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"